# FallGuard

./: .cproject  .project  CMakeLists.txt  FallGuard_AI提示词.md  README.md  pytest_fallguard.py
components/button_manager/: CMakeLists.txt  button_manager.c  button_manager.h
components/buzzer_alarm/: CMakeLists.txt  buzzer_alarm.c  buzzer_alarm.h
components/ld6002c/: CMakeLists.txt  ld6002c.c  ld6002c.h
components/led_indicator/: CMakeLists.txt  led_indicator.c  led_indicator.h
components/mqtt_reporter/: CMakeLists.txt  mqtt_reporter.c  mqtt_reporter.h
components/mqtt_reporter/certs/: mqtt_broker_ca.pem
components/oled_display/: CMakeLists.txt  oled_display.c  oled_display.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
docs/superpowers/specs/: 2026-04-23-wifi-scan-list-design.md  2026-04-24-page4-pseudo-3d-cloud-design.md  2026-04-24-wifi-ssid-overlay-design.md
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  app_radar.c  app_radar.h  main.c
tests/: test_buzzer_oled_removal.py  test_page4_cloud_reference.py
