idf_component_register(
    SRCS
        "main.c"
        "app_radar.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        button_manager
        led_indicator
        wifi_manager
        ld6002c
        buzzer_alarm
        mqtt_reporter
        esp_driver_gpio
        esp_event
        nvs_flash
)
